--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
     #chartdiv, #chartdiv1, #chartdiv2, #chartdiv3, #chartdiv4 {
       width: 100%;
       height: 500px;
-      margin-bottom: 50px;
     }
   </style>
 </head>
 <body>
   <div id="chartdiv"></div>
-  <hr/>
+  <hr/><hr/>
   <div id="chartdiv1"></div>
-  <hr/>
+  <hr/><hr/>
   <div id="chartdiv2"></div>
-  <hr/>
-
+  <hr/><hr/>
   <div id="chartdiv3"></div>
-  <hr/>
-
+  <hr/><hr/>
   <div id="chartdiv4"></div>
 
   <!-- مكتبات amCharts -->
@@ -30,167 +27,146 @@
   <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 
   <script>
-    // ======== الخريطة الأولى (Globe) ========
+    // ======== الخريطة الأولى (Globe ثابت) ========
     am5.ready(function() {
       var root = am5.Root.new("chartdiv");
       root.setThemes([ am5themes_Animated.new(root) ]);
       var chart = root.container.children.push(am5map.MapChart.new(root, {
-        panX: "rotateX",
-        panY: "rotateY",
-        projection: am5map.geoOrthographic(),
-        paddingBottom: 20,
-        paddingTop: 20,
-        paddingLeft: 20,
-        paddingRight: 20
+        panX: "none",
+        panY: "none",
+        projection: am5map.geoOrthographic()
       }));
+
       var polygonSeries = chart.series.push(am5map.MapPolygonSeries.new(root, {
         geoJSON: am5geodata_worldLow
       }));
+
       polygonSeries.mapPolygons.template.setAll({
         tooltipText: "{name}",
-        toggleKey: "active",
         interactive: true
       });
-      polygonSeries.mapPolygons.template.states.create("hover", {
-        fill: root.interfaceColors.get("primaryButtonHover")
-      });
-      var backgroundSeries = chart.series.push(am5map.MapPolygonSeries.new(root, {}));
-      backgroundSeries.mapPolygons.template.setAll({
-        fill: root.interfaceColors.get("alternativeBackground"),
-        fillOpacity: 0.1,
-        strokeOpacity: 0
-      });
-      backgroundSeries.data.push({
-        geometry: am5map.getGeoRectangle(90, 180, -90, -180)
-      });
+
       chart.appear(1000, 100);
     });
 
-    // ======== الخريطة الثانية (World + USA) ========
+    // ======== الخريطة الثانية (World + USA ثابتة) ========
     am5.ready(function() {
       var root = am5.Root.new("chartdiv1");
       root.setThemes([ am5themes_Animated.new(root) ]);
+
       var chart = root.container.children.push(am5map.MapChart.new(root, {
-        panX: "translateX",
-        panY: "translateY",
+        panX: "none",
+        panY: "none",
         projection: am5map.geoMercator()
       }));
+
       var polygonSeries1 = chart.series.push(am5map.MapPolygonSeries.new(root, {
         geoJSON: am5geodata_worldLow,
         exclude: ["AQ"]
       }));
+
       polygonSeries1.mapPolygons.template.setAll({
         tooltipText: "{name}",
-        toggleKey: "active",
         interactive: true
       });
+
       var polygonSeriesUS1 = chart.series.push(am5map.MapPolygonSeries.new(root, {
         geoJSON: am5geodata_usaLow
       }));
+
       polygonSeriesUS1.mapPolygons.template.setAll({
         tooltipText: "{name}",
-        toggleKey: "active",
         interactive: true
       });
-      var colors1 = am5.ColorSet.new(root, {});
-      polygonSeriesUS1.mapPolygons.template.set("fill", colors1.getIndex(3));
-      var zoomControl1 = chart.set("zoomControl", am5map.ZoomControl.new(root, {}));
-      zoomControl1.homeButton.set("visible", true);
+
       chart.appear(1000, 100);
     });
 
-    // ======== الخريطة الثالثة (Pacific-centered NaturalEarth1) ========
+    // ======== الخريطة الثالثة (Pacific-centered ثابتة) ========
     am5.ready(function() {
       var root = am5.Root.new("chartdiv2");
       root.setThemes([ am5themes_Animated.new(root) ]);
+
       var chart = root.container.children.push(am5map.MapChart.new(root, {
-        panX: "rotateX",
+        panX: "none",
         panY: "none",
         projection: am5map.geoNaturalEarth1(),
         rotationX: -154.8
       }));
+
       var polygonSeries = chart.series.push(am5map.MapPolygonSeries.new(root, {
-        geoJSON: am5geodata_worldLow}));
+        geoJSON: am5geodata_worldLow
+      }));
+
       polygonSeries.mapPolygons.template.setAll({
         tooltipText: "{name}",
         fillOpacity: 0.8
       });
-      var graticuleSeries = chart.series.push(am5map.GraticuleSeries.new(root, {}));
-      graticuleSeries.mapLines.template.setAll({
-        stroke: root.interfaceColors.get("alternativeBackground"),
-        strokeOpacity: 0.1
-      });
-      var zoomControl = chart.set("zoomControl", am5map.ZoomControl.new(root, {}));
-      zoomControl.homeButton.set("visible", true);
+
       chart.appear(1000, 100);
     });
 
-    // ======== الخريطة الرابعة (Globe toggle + markers) ========
+    // ======== الخريطة الرابعة (Markers ثابتة) ========
     am5.ready(function() {
       var root = am5.Root.new("chartdiv3");
       root.setThemes([ am5themes_Animated.new(root) ]);
+
       var chart = root.container.children.push(am5map.MapChart.new(root, {
-        panX: "rotateX",
-        panY: "translateY",
+        panX: "none",
+        panY: "none",
         projection: am5map.geoMercator()
       }));
-      var polygonSeries = chart.series.push(
-        am5map.MapPolygonSeries.new(root, { geoJSON: am5geodata_worldLow })
-      );
+
+      var polygonSeries = chart.series.push(am5map.MapPolygonSeries.new(root, {
+        geoJSON: am5geodata_worldLow
+      }));
+
       var pointSeries = chart.series.push(am5map.MapPointSeries.new(root, {}));
-      var colorset = am5.ColorSet.new(root, {});
-      pointSeries.bullets.push(function() {
-        var container = am5.Container.new(root, {
-          tooltipText: "{title}",
-          cursorOverStyle: "pointer"
-        });
-        var circle = container.children.push(am5.Circle.new(root, {
-          radius: 4,
-          fill: colorset.next(),
-          strokeOpacity: 0
-        }));
-        circle.animate({
-          key: "scale", from: 1, to: 5, duration: 600,
-          easing: am5.ease.out(am5.ease.cubic), loops: Infinity
-        });
-        circle.animate({
-          key: "opacity", from: 1, to: 0.1, duration: 600,
-          easing: am5.ease.out(am5.ease.cubic), loops: Infinity
-        });
-        return am5.Bullet.new(root, { sprite: container });
-      });
       var cities = [
-        { title: "Brussels", latitude: 50.8371, longitude: 4.3676 },
         { title: "Paris", latitude: 48.8567, longitude: 2.351 },
-        { title: "Tokyo", latitude: 35.6785, longitude: 139.6823 }
+        { title: "Tokyo", latitude: 35.6785, longitude: 139.6823 },
+        { title: "Washington", latitude: 38.8921, longitude: -77.0241 }
       ];
+
       for (var i = 0; i < cities.length; i++) {
+        var city = cities[i];
         pointSeries.data.push({
-          geometry: { type: "Point", coordinates: [cities[i].longitude, cities[i].latitude] },
-          title: cities[i].title
+          geometry: { type: "Point", coordinates: [city.longitude, city.latitude] },
+          title: city.title
         });
       }
       chart.appear(1000, 100);
     });
 
-    // ======== الخريطة الخامسة (Globe rotating) ========
+    // ======== الخريطة الخامسة (Globe تدور تلقائياً) ========
     am5.ready(function() {
       var root = am5.Root.new("chartdiv4");
       root.setThemes([ am5themes_Animated.new(root) ]);
+
       var chart = root.container.children.push(am5map.MapChart.new(root, {
-        panX: "rotateX",
-        panY: "rotateY",
+        panX: "none",
+        panY: "none",
         projection: am5map.geoOrthographic()
       }));
+
       var polygonSeries = chart.series.push(am5map.MapPolygonSeries.new(root, {
         geoJSON: am5geodata_worldLow
       }));
-      var graticuleSeries = chart.series.push(am5map.GraticuleSeries.new(root, {}));
-      graticuleSeries.mapLines.template.setAll({
-        strokeOpacity: 0.1,
-        stroke: root.interfaceColors.get("alternativeBackground")
+
+      polygonSeries.mapPolygons.template.setAll({
+        tooltipText: "{name}",
+        interactive: true
       });
-      chart.animate({ key: "rotationX", from: 0, to: 360, duration: 30000, loops: Infinity });
+
+      // دوران تلقائي
+      chart.animate({
+        key: "rotationX",
+        from: 0,
+        to: 360,
+        duration: 30000,
+        loops: Infinity
+      });
+
       chart.appear(1000, 100);
     });
   </script>
